KUDU-3268: fix race between MM scheduling and unregistration

Following commit 9e4664d the following race was possible (S: scheduler thread,
T: another thread):
  S: finds best op is op1
  T: unregisters op1 because the tablet is being shut down
  T: takes running_instances_lock_
    - waits for running count to go to 0
    - destructs op1
  S: takes running_instances_lock_
    - increments running count to 1
  S: attempts to run op1 but segfaults

This resulted in a crash like the following, when shutting down the tserver
(though it seems possible this could manifest itself when deleting a
TabletReplica):
PC: @     0x7ff97596de0d kudu::MaintenanceManager::LaunchOp()
*** SIGSEGV (@0x30) received by PID 21067 (TID 0x7ff96343b700) from PID 48; stack trace: ***
    @     0x7ff976846980 (unknown) at ??:0
    @     0x7ff97596de0d kudu::MaintenanceManager::LaunchOp() at ??:0
    @     0x7ff97596b538 _ZZN4kudu18MaintenanceManager18RunSchedulerThreadEvENKUlvE_clEv at ??:0
    @     0x7ff97596f124 _ZNSt17_Function_handlerIFvvEZN4kudu18MaintenanceManager18RunSchedulerThreadEvEUlvE_E9_M_invokeERKSt9_Any_data at ??:0
    @     0x7ff977e2bcf4 std::function<>::operator()() at ??:0
    @     0x7ff975a05e6e kudu::ThreadPool::DispatchThread() at ??:0
    @     0x7ff975a06757 _ZZN4kudu10ThreadPool12CreateThreadEvENKUlvE_clEv at ??:0
    @     0x7ff975a07e7b _ZNSt17_Function_handlerIFvvEZN4kudu10ThreadPool12CreateThreadEvEUlvE_E9_M_invokeERKSt9_Any_data at ??:0
    @     0x7ff977e2bcf4 std::function<>::operator()() at ??:0
    @     0x7ff9759f8913 kudu::Thread::SuperviseThread() at ??:0
    @     0x7ff97683b6db start_thread at ??:0
    @     0x7ff97388e71f clone at ??:0

This patch fixes this by checking whether the op has been cancelled, while
holding running_instanes_lock_, before proceeding with the scheduling. I added
a new test that failed consistently within 100 runs, that passed 5000 times
locally.

Change-Id: I29ad4d545de8166832b7c4148880a7e8719353bf
Reviewed-on: http://gerrit.cloudera.org:8080/17291
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>
Tested-by: Andrew Wong <awong@cloudera.com>
(cherry picked from commit 6aeb466c538d8cc566031c4a82200f18f088e18a)
Reviewed-on: http://gerrit.cloudera.org:8080/17293